[gd_scene load_steps=5 format=3 uid="uid://nllg77omh6tn"]

[ext_resource type="Script" uid="uid://bsrb4d2ym5ywk" path="res://scripts/turret_base.gd" id="1_epptn"]
[ext_resource type="Texture2D" uid="uid://bx7w3dfm2n6sh" path="res://sprites/T1.png" id="2_0a5ir"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y0xya"]
radius = 500.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7qd4m"]
radius = 150.0

[node name="TurretBase" type="Node2D"]
rotation = 0.785398
script = ExtResource("1_epptn")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -0.785398
texture = ExtResource("2_0a5ir")

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
position = Vector2(56, 55)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_y0xya")

[node name="SpawnCollision" type="Area2D" parent="." groups=["tower"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnCollision"]
shape = SubResource("CircleShape2D_7qd4m")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="SpawnCollision" to="." method="_on_spawn_collision_area_entered"]
